--- a/src/css/App.css
+++ b/src/css/App.css
@@ -47,3 +47,48 @@ button, input
     margin: 0px auto;
 
 }
+
+.titulo
+{
+    margin: 15px 0px;
+    font-family: Georgia;
+    font-size: 3rem;
+    font-weight: bold;
+    position: relative;
+    z-index: 1;
+
+}
+
+.titulo::after
+{
+    content: "";
+    display: block;
+    width: 20px;
+    height: 20px;
+    background: #ffbb11;
+    border-radius: 3px;
+    position: absolute;
+    bottom: 5px;
+    left: -5px;
+    z-index: -1;
+
+}
+
+.animaLeft
+{
+    opacity: 0;
+    transform: translateX(-20px);
+    animation: animaLeft 0.3s forwards;
+
+}
+
+@keyframes animaLeft
+{
+    to
+    {
+        opacity: 1;
+        transform: initial;
+
+    }
+
+}
