--- a/src/css/usuario/usuarioHeaderNav.module.css
+++ b/src/css/usuario/usuarioHeaderNav.module.css
@@ -53,7 +53,7 @@
 
 }
 
-.sair
+.nav .sair
 {
     display: flex;
     width: 40px;
@@ -68,11 +68,127 @@
 
 }
 
-.sair:hover, .sair:focus
+.nav .sair:hover, .nav .sair:focus
 {
     border-color: #333333;
     background: #ffffff;
     box-shadow: 0px 0px 0px 3px #eeeeee;
     outline: none;
+
+}
+
+.botaoMobile
+{
+    display: flex;
+    width: 40px;
+    height: 40px;
+    border: 1px solid transparent;
+    justify-content: center;
+    align-items: center;
+    background: #eeeeee;
+    border-radius: 3px;
+    transition: 0.1s;
+    cursor: pointer;
+
+}
+
+.botaoMobile::after
+{
+    content: "";
+    display: block;
+    width: 20px;
+    height: 2px;
+    background: currentColor;
+    border-radius: 2px;
+    box-shadow: 0px 6px currentColor, 0px -6px currentColor;
+    transition: 0.2s;
+
+}
+
+.botaoMobile:hover, .botaoMobile:focus
+{
+    border-color: #ffbb11;
+    color: #ffbb11;
+    background: #ffffff;
+    box-shadow: 0px 0px 0px 3px #ffeeaa;
+    outline: none;
+
+}
+
+.botaoMobileAtivo
+{
+    border-color: #ffbb11;
+    color: #ffbb11;
+    background: #ffffff;
+    box-shadow: 0px 0px 0px 3px #ffeeaa;
+    outline: none;
+
+}
+
+.botaoMobileAtivo::after
+{
+    transform: rotate(90deg);
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    box-shadow: 0px 8px currentColor, 0px -8px currentColor;
+
+}
+
+.navMobile
+{
+    display: block;
+    padding: 0px 15px;
+    background: #ffffff;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+    border-radius: 3px;
+    position: absolute;
+    top: 70px;
+    right: 0px;
+    opacity: 0;
+    transform: translateX(-10px);
+    pointer-events: none;
+
+}
+
+.navMobileAtivo
+{
+    opacity: 1;
+    transform: initial;
+    transition: 0.3s;
+    pointer-events: initial;
+    z-index: 100;
+
+}
+
+.navMobile ul li a, .navMobile .sair
+{
+    display: flex;
+    width: 100%;
+    padding: 8px 0px;
+    border-bottom: 1px solid #eeeeee;
+    align-items: center;
+    gap: 5px;
+    background: none;
+    cursor: pointer;
+
+}
+
+.navMobile .sair
+{
+    display: flex;
+    width: 100%;
+    padding: 8px 0px;
+    border: none;
+    align-items: center;
+    gap: 5px;
+    background: none;
+    cursor: pointer;
+
+}
+
+.navMobile ul li a:hover svg > *, .navMobile .sair:hover svg > *
+{
+    fill: #ffbb11;
 
 }
